tests/baselines/reference/ClassAndModuleWithSameNameAndCommonRootES6.errors.txt
class.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
class.ts(1,10): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
module.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
module.ts(1,10): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
module.ts(2,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
module.ts(2,19): error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.
simple.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== class.ts (2 errors) ====
    module X.Y {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
             ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class Point {
            constructor(x: number, y: number) {
                this.x = x;
                this.y = y;
            }
            x: number;
            y: number;
        }
    }
    
==== module.ts (4 errors) ====
    module X.Y {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
             ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module Point {
                      ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                      ~~~~~
!!! error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.
            export var Origin = new Point(0, 0);
        }
    }
    
==== test.ts (0 errors) ====
    //var cl: { x: number; y: number; }
    var cl = new X.Y.Point(1,1);
    var cl = X.Y.Point.Origin; // error not expected here same as bug 83996 ?
    
    
==== simple.ts (1 errors) ====
    class A {
        id: string;
    }
    
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var Instance = new A();
    }
    
    // ensure merging works as expected
    var a = A.Instance;
    var a = new A();
    var a: { id: string };
    